[#328] Fix NPE when using ProtocolLib 5.1.0 or older (#329)